--- a/bower.json
+++ b/bower.json
@@ -6,14 +6,13 @@
     "bower_components",
     "output"
   ],
-  "dependencies": {
-    "purescript-prelude": "^3.0.0",
-    "purescript-console": "^3.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0",
-    "purescript-affjax": "^4.0.0",
-    "purescript-arraybuffer": "^5.0.0",
-    "purescript-debug": "^3.0.0"
+    "purescript-prelude": "^4.0.1",
+    "purescript-console": "^4.1.0",
+    "purescript-psci-support": "^4.0.0",
+    "purescript-affjax": "^6.0.0",
+    "purescript-arraybuffer": "^7.0.0",
+    "purescript-debug": "^4.0.0"
   }
 }
